Publish APIs (#3544)
* New publish APIs

* API rename to publish/dependencies. Tweaks to publish package request

* requestApproval parameter for publish API

* Add publishAll flag to publish API. Add submitter param filter to get packages API

* repository/log API

* API specs: publish trigger, package retry, package clone

* Publishing progress related responses

* Remove non-implemented/removed APIs from spec

* Deprecate old publish APIs

* New Publisher db tables. Remove old tables.

* Remove old publisher-related code

* Remove item previous_path

* Make published repo bare
Initial publish updates

* Studio API tweaks

* New publish API methods skeleton. Publish services refactor

* Publish all package submission

* PublishItem DAO
Regular publish package builder

* PublishDAO updates
Regular publishing package submission

* ItemTargetDAO. Publishing package submission updates

* Include children in publishing package when requested

* Publish-all for any request if site has not been published. API tweaks

* API 1 commits and bulk-golive tweaked and marked as deprecated. Bulk publish root becomes publish-all

* Publish calculation package tweaks: get soft deps of children paths

* Publish APIs tweaks. Publish dependencies calculation

* Remove 'notifySubmitter' option from APIs and publish package

* Drop the 'publish package retry' API in favor or using publish/package/{packageId}/clone'

* Dependency services refactor

* Hard dependencies. API spec tweaks

* Workflow events for publish submission

* Transactional publishing package+items insert

* Simplify ItemDAO result mappers. Update queries to remove references to old workflow table

* Event-based publishing
Initial publish

* Initial publish tweaks. Publish all (WIP)

* Do NOT publish-all when publishing the root

* javadoc tweaks

* Hard dependency calculation tweaks. Delete publish_package records on new site delete

* Initial